Upgrade & reorganize deps